--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.iince98.mycar">
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/aracbakim"
@@ -10,18 +9,22 @@
         android:roundIcon="@drawable/aracbakim"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Giris"></activity>
-        <activity android:name=".Arac_bilgi"></activity>
-
-
-
+        <activity android:name=".Giris" />
+        <activity android:name=".Arac_bilgi" />
     </application>
 
 </manifest>
